--- a/ui/.env.test
+++ b/ui/.env.test
@@ -1,14 +1,12 @@
-# .env.test
+# .env
 
-# Test Database
-DB_HOST=test-db.awesome-saas.com
+# Application Name and Base URL
+APP_NAME=AwesomeSaaS
+BASE_URL=https://awesome-saas.com
+
+# Database
+DB_HOST=localhost
 DB_PORT=5432
-DB_USER=testuser
-DB_PASSWORD=testpassword123
-DB_NAME=awesome_saas_test_db
-
-# Mock API Key for Tests
-STRIPE_API_KEY=sk_test_mockAPIKeyForTests
-
-# Use Fake Email Server for Testing
-EMAIL_FROM=noreply@fake-saas-test.com
+DB_USER=admin
+DB_PASSWORD=securepassword123
+DB_NAME=awesome_saas_db
