--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,12 @@
   "name": "ui",
   "version": "0.0.1",
   "private": true,
+  "vault": {
+    "env-files": [
+      ".env",
+      ".env.local"
+    ]
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,28 +21,53 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@clerk/backend": "^1.8.0",
     "@clerk/nextjs": "^5.2.14",
+    "@codemirror/highlight": "^0.19.8",
+    "@codemirror/language": "^6.10.2",
     "@convex-dev/auth": "^0.0.48",
+    "@convex-dev/react-query": "0.0.0-alpha.5",
+    "@google/generative-ai": "^0.17.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@langchain/core": "^0.2.31",
+    "@langchain/google-genai": "^0.0.26",
+    "@lezer/common": "^1.2.1",
+    "@mdx-js/mdx": "^3.0.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.1",
+    "@types/ms": "^0.7.34",
+    "@uiw/codemirror-extensions-langs": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
     "@uiw/react-textarea-code-editor": "^3.0.2",
     "@upstash/redis": "^1.34.0",
+    "ai": "^3.3.29",
+    "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.14.0",
+    "convex-ents": "^0.11.0",
     "convex-helpers": "^0.1.52",
+    "events": "^3.3.0",
+    "langchain": "^0.2.18",
     "lucide-react": "^0.424.0",
+    "ms": "^2.1.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "svix": "^1.30.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.14",
