updated dependacies and installed some packages

--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "ts:lint": "tsc --noEmit",
     "convex:dev": "convex dev",
     "test": "vitest",
     "test:once": "vitest run",
@@ -31,6 +32,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@langchain/core": "^0.2.31",
     "@langchain/google-genai": "^0.0.26",
+    "@langchain/community": "0.2.33",
     "@lezer/common": "^1.2.1",
     "@mdx-js/mdx": "^3.0.1",
     "@radix-ui/react-checkbox": "^1.1.1",
