added some tests

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -21,4 +21,13 @@ UPSTASH_REDIS_REST_TOKEN=""
 # https://ai.google.dev/
 GOOGLE_GENERATIVE_AI_API_KEY=""
 
+# Unkey.dev
+# https://www.unkey.com/docs/introduction
+UNKEY_MASTER_KEY=""
+UNKEY_API_ID=""
+
+# Sentry
+# https://docs.sentry.io/organization/integrations/deployment/vercel/
+SENTRY_AUTH_TOKEN=
+
 
