--- a/ui/package.json
+++ b/ui/package.json
@@ -83,6 +83,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@edge-runtime/vm": "^4.0.3",
     "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
