--- a/cli/package.json
+++ b/cli/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^20.14.14",
     "async-listen": "^3.0.1",
     "axios": "^1.7.4",
+    "axios-retry": "^4.5.0",
     "chokidar": "^3.6.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
