--- a/cli/package.json
+++ b/cli/package.json
@@ -38,7 +38,9 @@
     "dotenv"
   ],
   "dependencies": {
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.14.14",
+    "@types/which": "^3.0.4",
     "async-listen": "^3.0.1",
     "axios": "^1.7.4",
     "axios-retry": "^4.5.0",
@@ -46,10 +48,12 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "glob": "^11.0.0",
+    "minimist": "^1.2.8",
     "nanoid": "3.3.4",
     "open": "^10.1.0",
     "ora": "^8.0.1",
     "picocolors": "^1.0.1",
+    "which": "^4.0.0",
     "zx": "^8.1.4"
   },
   "devDependencies": {
