--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dxenv": {},
+  "type": "module",
   "scripts": {
-    "dev": "node injest.js && next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "node injest.js && next start",
+    "start": "next start",
     "lint": "next lint",
     "ts:lint": "tsc --noEmit",
     "convex:dev": "convex dev",
@@ -62,6 +63,7 @@
     "convex-ents": "^0.11.0",
     "convex-helpers": "^0.1.52",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "events": "^3.3.0",
     "framer-motion": "^11.5.4",
     "langchain": "^0.2.18",
